<resources>
    <string name="app_name">MiPush Framework Enhancement</string>
    <string name="xposed_description">Fake equipment manufacturer into Xiaomi to enable mipush\nMiPush components need to be installed</string>

    <string name="pref_menu_get_conf_path">View config file path</string>
    <string name="pref_cat_module">Module</string>
    <string name="pref_working_mode">Working mode</string>
    <string name="pref_working_mode_summary">Determine the working mode of the module\nNote: the built-in blacklist will always work</string>
    <array name="pref_working_mode_entries">
        <item>Disabled</item>
        <item>Blacklist</item>
        <item>Whitelist</item>
    </array>
    <array name="pref_working_mode_entry_values">
        <item>disabled</item>
        <item>blacklist</item>
        <item>whitelist</item>
    </array>
    <string name="pref_blacklist">Blacklist</string>
    <string name="pref_blacklist_summary">The selected apps will not take effect</string>
    <string name="pref_whitelist">Whitelist</string>
    <string name="pref_whitelist_summary">Only the selected apps take effect</string>
    <string name="pref_hide_icon">Hide icon</string>
    <string name="pref_hide_icon_summary">Hide the icon displayed on the desktop, can be opened in Xposed modules list\nAfter opening, you may not be able to add module to multi-user environment. If there is a problem, please close it</string>
    <string name="pref_enhancement_status">Enhancement status</string>
    <string name="pref_enhancement_status_summary">Manufacturer: %s (%s / %s)\nBrand: %s (%s / %s)\nMIUI Version Name: %s\nMIUI Version Code: %s\nMIUI Version Time: %s</string>
    <string name="pref_enhancement_status_failed">Disabled</string>
    <string name="pref_enhancement_status_success">Enabled</string>
    <string name="pref_enhancement_status_security">It is detected that you are using malware to activate this module.\nAll functions of this module have been disabled.\nPlease uninstall the malware and re-open this interface.</string>
</resources>
