<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- The keys of preferences are converted to the ini section / options.
        Please refer to IniHelper.java for more details.

        This XML only describes known preferences, which are available through UI.
        Any keys that are present in the INI but not the UI will not be shown.
    -->
    <PreferenceCategory
        android:title="@string/pref_cat_module">
        <SimpleMenuPreference
            android:key="module_working_mode"
            android:title="@string/pref_working_mode"
            android:summary="@string/pref_working_mode_summary"
            android:entries="@array/pref_working_mode_entries"
            android:entryValues="@array/pref_working_mode_entry_values"
            android:defaultValue="blacklist" />
        <MultiSelectListPreference
            android:key="module_blacklist"
            android:title="@string/pref_blacklist"
            android:summary="@string/pref_blacklist_summary"/>
        <MultiSelectListPreference
            android:key="module_whitelist"
            android:title="@string/pref_whitelist"
            android:summary="@string/pref_whitelist_summary"/>
    </PreferenceCategory>
</PreferenceScreen>